--- a/style.css
+++ b/style.css
@@ -3,7 +3,9 @@
     padding: 0;
 }
 
-body { font-family: 'Montserrat' , sans-serif }
+body {
+    font-family: 'Montserrat', sans-serif
+}
 
 header {
     background: #bbbbbb;
@@ -16,7 +18,7 @@ header {
     margin: 0 auto;
 }
 
-nave{
+nave {
     position: absolute;
     top: 110px;
     right: 0;
@@ -38,7 +40,7 @@ nave a {
 
 nave a:hover {
     color: #c78c19;
-    
+
 }
 
 .produtos {
@@ -63,6 +65,7 @@ nave a:hover {
 .produtos li:hover {
     color: #c78c19
 }
+
 .produtos li:hover h2 {
     font-size: 34px;
 }
@@ -101,33 +104,31 @@ footer {
     margin-top: 20px;
 }
 
-main {
-    width: 940px;
-    margin: 0 auto;
-}
 
-form{
+
+form {
     margin: 40px 0;
 }
 
-form label, legend {
+form label,
+legend {
     display: block;
     font-size: 20px;
     margin: 0 0 10px;
 }
 
 .input-padrao {
-    display : block;
+    display: block;
     margin: 0 0 20px;
     padding: 10px 25px;
     width: 50%
-} 
+}
 
-.checkbox{
+.checkbox {
     margin: 20px 0;
 }
 
-.enviar{
+.enviar {
     width: 40%;
     padding: 15px 0;
     background: rgb(1, 155, 155);
@@ -156,14 +157,17 @@ thead {
     font-weight: bold;
 }
 
-td , th{
+td,
+th {
     border: 1px solid #000000;
     padding: 7px 15px;
 }
 
 /* CSS da pagina inicial */
 
-.banner { width: 100% }
+.banner {
+    width: 100%
+}
 
 .tituloPrincipal {
     text-align: center;
@@ -172,9 +176,24 @@ td , th{
     clear: left;
 }
 
-.principal p { margin: 0 0 1em }
-.principal strong { font-weight: bold}
-.principal em { font-style: italic }
+.principal {
+    padding: 3em 0.5em;
+    background: #fefefe;
+    width: 940px;
+    margin: 0 auto;
+}
+
+.principal p {
+    margin: 0 0 1em
+}
+
+.principal strong {
+    font-weight: bold
+}
+
+.principal em {
+    font-style: italic
+}
 
 .principal .utensilios {
     width: 125px;
@@ -182,4 +201,57 @@ td , th{
     margin: 0 20px 20px 0;
 }
 
-.imagemBeneficios { width: 60% }
+.mapa {
+    padding: 3em 0;
+    background: linear-gradient(#fefefe, #888888)
+}
+
+.mapa p {
+    margin: 0 0 2em;
+    text-align: center;
+}
+
+.mapaConteudo {
+    width: 940px;
+    margin: 0 auto;
+}
+
+
+.beneficios {
+    padding: 3em 0;
+    background: #888888
+}
+
+.conteudoBeneficios {
+    width: 640px;
+    margin: 0 auto;
+}
+
+.listaBeneficios {
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.items:before {
+    content: " "
+}
+
+.items {
+    line-height: 1.5
+}
+
+.items:nth-child(1) {
+    color: #088
+}
+
+.imagemBeneficios {
+    width: 60%
+}
+
+
+
+.video {
+    width: 560px;
+    margin: 2em auto;
+}
